crates/formatter/tests/snapshots/snapshots__migrations__000357_add_user_secrets.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Stores encrypted user secrets (global, available across all organizations)
create table user_secrets (
	id UUID primary key default gen_random_uuid(),
	user_id UUID not null references users (id) on delete cascade,
	name text not null,
	description text not null,

	-- The encrypted secret value (base64-encoded encrypted data)
	value text not null,

	-- Auto-injection settings
	-- Environment variable name (e.g., "DATABASE_PASSWORD", "API_KEY")
	-- Empty string means don't inject as env var
	env_name text not null default '',

	-- File path where secret should be written (e.g., "/home/coder/.ssh/id_rsa")
	-- Empty string means don't inject as file
	file_path text not null default '',

	-- Timestamps
	created_at timestamp with time zone default CURRENT_TIMESTAMP not null,
	updated_at timestamp with time zone default CURRENT_TIMESTAMP not null
);

-- Unique constraint: user can't have duplicate secret names
create unique index user_secrets_user_name_idx on user_secrets (user_id, name);

-- Unique constraint: user can't have duplicate env names
create unique index user_secrets_user_env_name_idx
	on user_secrets (user_id, env_name)
	where env_name != '';

-- Unique constraint: user can't have duplicate file paths
create unique index user_secrets_user_file_path_idx
	on user_secrets (user_id, file_path)
	where file_path != '';
