crates/formatter/tests/snapshots/snapshots__migrations__000358_failed_ext_auth_error.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table external_auth_links drop column oauth_refresh_failure_reason;
