crates/formatter/tests/snapshots/snapshots__migrations__000358_failed_ext_auth_error.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table external_auth_links add column oauth_refresh_failure_reason text not null default '';

comment on column external_auth_links.oauth_refresh_failure_reason is 'This error means the refresh token is invalid. Cached so we can avoid calling the external provider again for the same error.';
