crates/formatter/tests/snapshots/snapshots__migrations__000360_external_agents.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop view template_version_with_user;
drop view workspace_build_with_user;

alter table template_versions drop column has_external_agent;
alter table workspace_builds drop column has_external_agent;

-- Recreate `template_version_with_user` as defined in dump.sql
create view template_version_with_user as
select
	template_versions.id,
	template_versions.template_id,
	template_versions.organization_id,
	template_versions.created_at,
	template_versions.updated_at,
	template_versions.name,
	template_versions.readme,
	template_versions.job_id,
	template_versions.created_by,
	template_versions.external_auth_providers,
	template_versions.message,
	template_versions.archived,
	template_versions.source_example_id,
	template_versions.has_ai_task,
	COALESCE(visible_users.avatar_url, ''::text) as created_by_avatar_url,
	COALESCE(visible_users.username, ''::text) as created_by_username,
	COALESCE(visible_users.name, ''::text) as created_by_name
from
	(
		template_versions
		left join visible_users on (
			(template_versions.created_by = visible_users.id)
		)
	);

comment on view template_version_with_user is 'Joins in the username + avatar url of the created by user.';

-- Recreate `workspace_build_with_user` as defined in dump.sql
create view workspace_build_with_user as
select
	workspace_builds.id,
	workspace_builds.created_at,
	workspace_builds.updated_at,
	workspace_builds.workspace_id,
	workspace_builds.template_version_id,
	workspace_builds.build_number,
	workspace_builds.transition,
	workspace_builds.initiator_id,
	workspace_builds.provisioner_state,
	workspace_builds.job_id,
	workspace_builds.deadline,
	workspace_builds.reason,
	workspace_builds.daily_cost,
	workspace_builds.max_deadline,
	workspace_builds.template_version_preset_id,
	workspace_builds.has_ai_task,
	workspace_builds.ai_task_sidebar_app_id,
	COALESCE(visible_users.avatar_url, ''::text) as initiator_by_avatar_url,
	COALESCE(visible_users.username, ''::text) as initiator_by_username,
	COALESCE(visible_users.name, ''::text) as initiator_by_name
from
	(
		workspace_builds
		left join visible_users on (
			(workspace_builds.initiator_id = visible_users.id)
		)
	);

comment on view workspace_build_with_user is 'Joins in the username + avatar url of the initiated by user.';
