crates/formatter/tests/snapshots/snapshots__migrations__000361_username_length_constraint.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table users
	add constraint users_username_min_length check (length(username) >= 1);
